# amberkey

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  scorecard.yml
compliance/: README.md  asvs.md  cis-ig1.md  cisa-sbd.md  crypto.md  nist-800-63b.md  nist-csf.md  openssf-badge.md  slsa.md  ssdf.md
crates/core/: Cargo.toml
crates/core/examples/: make_fixture.rs
crates/core/src/: bundle.rs  card.rs  error.rs  kit.rs  lib.rs  wasm.rs
crates/core/src/slip39/: cipher.rs  gf256.rs  mod.rs  rs1024.rs  share.rs  wordlist.rs
crates/core/tests/: roundtrip.rs  trezor_vectors.rs
crates/recover-cli/: Cargo.toml
crates/recover-cli/src/: main.rs
spec/: bundle-format.md  openapi.yaml  recovery.md  share-card.md  threat-model.md
web/recovery-tool/: .gitignore  build.mjs  package-lock.json  package.json  playwright.config.mjs  template.html
web/recovery-tool/test/: recover.spec.mjs
