[package]
name = "amberkey-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AmberKey crypto core: SLIP-39 secret sharing, age continuity bundles, share card model"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
age = { version = "0.11", default-features = false }
base64 = "0.22"
bech32 = "0.11"
hmac = "0.12"
pbkdf2 = "0.12"
sha2 = "0.10"
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = { version = "0.4", default-features = false }
thiserror = "2"

wasm-bindgen = { version = "0.2", optional = true }
qrcode = { version = "0.14", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
wasm = ["dep:wasm-bindgen"]
kit = [ "dep:qrcode"]
